Edited console-UI for Linux